add services and jobs and update documentation
