# db/schema.rb
@@ -10,36 +10,35 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2021_03_10_222222) do
-
-  create_table "applications", options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4", force: :cascade do |t|
-    t.string "name", null: false
-    t.string "number", null: false
-    t.integer "chats_count", default: 0
-    t.datetime "created_at", precision: 6, null: false
-    t.datetime "updated_at", precision: 6, null: false
-    t.index ["number"], name: "index_applications_on_number"
+ActiveRecord::Schema.define(version: 20_210_310_222_222) do
+  create_table 'applications', options: 'ENGINE=InnoDB DEFAULT CHARSET=utf8mb4', force: :cascade do |t|
+    t.string 'name', null: false
+    t.string 'number', null: false
+    t.integer 'chats_count', default: 0
+    t.datetime 'created_at', precision: 6, null: false
+    t.datetime 'updated_at', precision: 6, null: false
+    t.index ['number'], name: 'index_applications_on_number'
   end
 
-  create_table "chats", options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4", force: :cascade do |t|
-    t.bigint "application_id", null: false
-    t.string "number"
-    t.integer "messages_count", default: 0
-    t.datetime "created_at", precision: 6, null: false
-    t.datetime "updated_at", precision: 6, null: false
-    t.index ["application_id"], name: "index_chats_on_application_id"
-    t.index ["number"], name: "index_chats_on_number"
+  create_table 'chats', options: 'ENGINE=InnoDB DEFAULT CHARSET=utf8mb4', force: :cascade do |t|
+    t.bigint 'application_id', null: false
+    t.string 'number'
+    t.integer 'messages_count', default: 0
+    t.datetime 'created_at', precision: 6, null: false
+    t.datetime 'updated_at', precision: 6, null: false
+    t.index ['application_id'], name: 'index_chats_on_application_id'
+    t.index ['number'], name: 'index_chats_on_number'
   end
 
-  create_table "messages", options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4", force: :cascade do |t|
-    t.text "text", null: false
-    t.datetime "created_at", precision: 6, null: false
-    t.datetime "updated_at", precision: 6, null: false
-    t.bigint "chat_id"
-    t.string "number"
-    t.index ["chat_id"], name: "index_messages_on_chat_id"
+  create_table 'messages', options: 'ENGINE=InnoDB DEFAULT CHARSET=utf8mb4', force: :cascade do |t|
+    t.text 'text', null: false
+    t.datetime 'created_at', precision: 6, null: false
+    t.datetime 'updated_at', precision: 6, null: false
+    t.bigint 'chat_id'
+    t.string 'number'
+    t.index ['chat_id'], name: 'index_messages_on_chat_id'
   end
 
-  add_foreign_key "chats", "applications"
-  add_foreign_key "messages", "chats"
+  add_foreign_key 'chats', 'applications'
+  add_foreign_key 'messages', 'chats'
 end
